--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -54,7 +54,7 @@
                                             <action selector="vendorLabelTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GIU-pY-FWJ"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qtq-yb-8sg">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qtq-yb-8sg" userLabel="By Label Button">
                                         <rect key="frame" x="78" y="-5" width="167" height="30"/>
                                         <connections>
                                             <action selector="byLabelTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="l7s-41-GyT"/>
