--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -262,6 +262,7 @@
                 <outlet property="priceLabel" destination="2D9-dG-k9E" id="o87-Hv-JUL"/>
                 <outlet property="vendorLabel" destination="SSR-4S-9BF" id="PqE-PW-DhV"/>
                 <outlet property="vigruzitImageView" destination="SgS-Tb-JH2" id="sxU-hf-4TK"/>
+                <outlet property="vigruzitView" destination="zhE-qm-INE" id="l8m-1S-Uaz"/>
             </connections>
             <point key="canvasLocation" x="52.898550724637687" y="316.74107142857139"/>
         </tableViewCell>
