--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -2303,7 +2303,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Cl-zS-KfS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="577" y="1636"/>
+            <point key="canvasLocation" x="576.92307692307691" y="1635.7819905213269"/>
         </scene>
         <!--Menu Hosting Controller-->
         <scene sceneID="Gya-o8-FEd">
@@ -2606,19 +2606,19 @@
                                 <rect key="frame" x="0.0" y="88" width="390" height="673"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="EKV-Bw-0tA">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="75"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="59"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iXp-Gb-Eke">
-                                            <rect key="frame" x="16" y="10" width="358" height="49"/>
+                                            <rect key="frame" x="16" y="10" width="358" height="41"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Поиск по тексту и фото" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rJu-Fk-XD1">
-                                                    <rect key="frame" x="35.666666666666657" y="15.33333333333333" width="275.33333333333337" height="18.666666666666671"/>
+                                                    <rect key="frame" x="35.666666666666657" y="11.33333333333333" width="275.33333333333337" height="18.666666666666671"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                                 </textField>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Yng-0i-1x4">
-                                                    <rect key="frame" x="319" y="8.6666666666666643" width="31" height="32"/>
+                                                    <rect key="frame" x="319" y="4.6666666666666643" width="31" height="32"/>
                                                     <color key="tintColor" red="0.79610997439999998" green="0.79994326829999995" blue="0.80392938849999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="35" id="8JY-Ka-Zb4"/>
@@ -2626,11 +2626,11 @@
                                                     </constraints>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Voi-pu-WKG">
-                                                    <rect key="frame" x="8.0000000000000018" y="15.666666666666664" width="19.666666666666671" height="18"/>
+                                                    <rect key="frame" x="8.0000000000000018" y="11.666666666666664" width="19.666666666666671" height="18"/>
                                                     <color key="tintColor" red="0.79610997439999998" green="0.79994326829999995" blue="0.80392938849999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yuu-eM-dI7">
-                                                    <rect key="frame" x="309.66666666666669" y="9.6666666666666679" width="50" height="30.000000000000004"/>
+                                                    <rect key="frame" x="309.66666666666669" y="5.6666666666666643" width="50" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="clv-Tp-lxz"/>
                                                         <constraint firstAttribute="width" constant="50" id="dPt-wa-bhO"/>
@@ -2657,14 +2657,63 @@
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstItem="iXp-Gb-Eke" firstAttribute="top" secondItem="EKV-Bw-0tA" secondAttribute="top" constant="10" id="YvR-Dt-7sI"/>
-                                        <constraint firstAttribute="bottom" secondItem="iXp-Gb-Eke" secondAttribute="bottom" constant="16" id="rNU-Ge-dWM"/>
+                                        <constraint firstAttribute="bottom" secondItem="iXp-Gb-Eke" secondAttribute="bottom" constant="8" id="rNU-Ge-dWM"/>
                                         <constraint firstAttribute="trailing" secondItem="iXp-Gb-Eke" secondAttribute="trailing" constant="16" id="riQ-Ec-jfo"/>
                                         <constraint firstItem="iXp-Gb-Eke" firstAttribute="leading" secondItem="EKV-Bw-0tA" secondAttribute="leading" constant="16" id="tqn-ja-FMP"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchResultsCell" rowHeight="38" id="Lhy-B2-3Co">
+                                        <rect key="frame" x="0.0" y="87" width="390" height="38"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lhy-B2-3Co" id="ElG-up-BV3">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="38"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сегодня: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6R-lp-Ccp">
+                                                    <rect key="frame" x="28" y="8" width="86" height="14"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="86" id="E1Z-aL-9ca"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вчера: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVK-Xe-f9Z">
+                                                    <rect key="frame" x="152" y="8" width="86" height="14"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="86" id="9gw-SK-VCy"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Всего: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aDN-4Z-MQJ">
+                                                    <rect key="frame" x="292" y="8" width="86" height="14"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="86" id="p3E-oz-kSb"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="K6R-lp-Ccp" firstAttribute="top" secondItem="ElG-up-BV3" secondAttribute="top" constant="8" id="3C0-GR-blY"/>
+                                                <constraint firstItem="CVK-Xe-f9Z" firstAttribute="top" secondItem="ElG-up-BV3" secondAttribute="top" constant="8" id="LJE-kH-SS1"/>
+                                                <constraint firstAttribute="bottom" secondItem="K6R-lp-Ccp" secondAttribute="bottom" constant="16" id="Xhj-Bu-0Sb"/>
+                                                <constraint firstItem="K6R-lp-Ccp" firstAttribute="leading" secondItem="ElG-up-BV3" secondAttribute="leadingMargin" constant="8" id="YEy-pr-bhx"/>
+                                                <constraint firstItem="aDN-4Z-MQJ" firstAttribute="top" secondItem="ElG-up-BV3" secondAttribute="top" constant="8" id="Z8G-Qh-6O8"/>
+                                                <constraint firstItem="aDN-4Z-MQJ" firstAttribute="trailing" secondItem="ElG-up-BV3" secondAttribute="trailingMargin" constant="8" id="aVy-a8-pko"/>
+                                                <constraint firstAttribute="bottom" secondItem="CVK-Xe-f9Z" secondAttribute="bottom" constant="16" id="bPj-qp-B3n"/>
+                                                <constraint firstAttribute="bottom" secondItem="aDN-4Z-MQJ" secondAttribute="bottom" constant="16" id="iJ6-A0-yJa"/>
+                                                <constraint firstItem="CVK-Xe-f9Z" firstAttribute="centerX" secondItem="ElG-up-BV3" secondAttribute="centerX" id="ji9-Vp-XcQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="hintCell" rowHeight="60" id="gUA-i7-ybc">
-                                        <rect key="frame" x="0.0" y="103" width="390" height="60"/>
+                                        <rect key="frame" x="0.0" y="125" width="390" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gUA-i7-ybc" id="Ql8-hy-5G2">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
@@ -2820,7 +2869,7 @@
         <segue reference="yR4-7g-u1L"/>
         <segue reference="UT5-6g-K7A"/>
         <segue reference="5co-KY-lmW"/>
-        <segue reference="BuK-hk-BZE"/>
+        <segue reference="CqK-8r-UgW"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="chevron.down" catalog="system" width="128" height="72"/>
