--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -108,6 +108,9 @@
                                         </constraints>
                                         <color key="tintColor" red="0.79214709999999999" green="0.79215180870000002" blue="0.79216402770000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" image="line.horizontal.3" catalog="system"/>
+                                        <connections>
+                                            <action selector="peerButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2oq-Kw-ZHF"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zhE-qm-INE" userLabel="vigruzitView">
                                         <rect key="frame" x="33" y="5" width="105" height="25"/>
